# map-annotation-collection

./: .gitignore  pyproject.toml
src/: app.py  models.py  utils.py
src/draw_site/: draw_app.py
src/draw_site/static/css/: style.css
src/draw_site/static/js/: app.js
src/draw_site/static/version1/: style.css
src/draw_site/static/version2/: survey.html
src/draw_site/templates/: draw_survey.html
src/landmark_site/: landmark_app.py
src/landmark_site/static/js/: app.js
src/landmark_site/static/version2/: style.css
src/landmark_site/templates/: landmark_survey.html
src/old/static/version1/: survey.html
src/old/static/version3/: app.js  survey.html
src/old/templates/: login.html  survey.html
src/shared/: answer_routes.py  batch_routes.py  config.py  factory.py  models.py  shared_routes.py  static_routes.py  utils.py
src/static/css/: style.css
src/static/js/: app.js
src/templates/: survey.html
user_landmarks/: 1_landmarks.json  22_landmarks.json  48_landmarks.json  81_landmarks.json  93_landmarks.json  94_landmarks.json  97_landmarks.json
